k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stellar-oracle
  labels:
    app.kubernetes.io/part-of: stellar-oracle
    istio-injection: enabled
